<resources>
    <string name="app_name">samvel_homework_lesson_10</string>
    <string name="dumbText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard.</string>
    <string name="heading">Heading</string>
    <string name="restaurant">Restaurant</string>
    <string name="request">REQUEST</string>
    <string name="search_hint">Search by place name</string>
    <string name="call">CAll</string>
    <string name="type_hint">Type something here</string>
    <string name="send">Send</string>
    <string name="link_to">Link to other page</string>
    <string-array name="cities">
        <item>Yerevan</item>
        <item>London</item>
        <item>Paris</item>
        <item>Rome</item>
        <item>Tokyo</item>
        <item>Berlin</item>
        <item>Los Angeles</item>
        <item>Moscow</item>
    </string-array>
</resources>