<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_frame"
        android:scaleType="centerCrop"
        android:src="@drawable/grid_image_1"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/heading"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/dumbText"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/restaurant_icon"
        android:drawablePadding="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/restaurant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:background="@drawable/golden_white_rounded_frame"
        android:text="@string/request"
        android:textColor="#AB8E3B"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>